fix: buttons align

--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -3,7 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 30px;
   @include mobile {
     overflow-x: auto;
     white-space: nowrap;
